--- a/package.json
+++ b/package.json
@@ -37,7 +37,12 @@
     "TODO-test-in-sauce": ""
   },
   "dependencies": {
-    "bluebird": "^3.5.0"
+    "backoff-promise": "0.0.2",
+    "bluebird": "^3.5.0",
+    "quelle": "0.0.3",
+    "request": "^2.81.0",
+    "sporks": "0.0.1",
+    "squadron": "0.0.3"
   },
   "devDependencies": {
     "beautify-proj": "^1.0.0",
@@ -47,8 +52,7 @@
     "gofur": "^0.0.7",
     "istanbul": "^0.4.5",
     "jshint": "^2.9.4",
-    "mocha": "^3.4.2",
-    "request": "^2.81.0"
+    "mocha": "^3.4.2"
   },
   "greenkeeper": {
     "ignore": [
