--- a/circle.yml
+++ b/circle.yml
@@ -22,7 +22,7 @@ dependencies:
 
     # Enable CORS
     - nvm use 7.10.0 && npm install -g add-cors-to-couchdb
-    - add-cors-to-couchdb http://localhost:5984 -u admin -p admin
+    - nvm use 7.10.0 && add-cors-to-couchdb http://localhost:5984 -u admin -p admin
 
   override:
     - nvm use 7.10.0 && npm install
