--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "gofur": "^0.0.7",
     "istanbul": "^0.4.5",
     "jshint": "^2.9.4",
+    "memorystream": "^0.3.1",
     "mocha": "^3.4.2"
   },
   "greenkeeper": {
