--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "couch-slouch",
   "version": "0.0.1",
-  "description": "Interface with CouchDB without the heavy lifting",
+  "description": "An API for CouchDB that does the heavy lifting",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -21,7 +21,7 @@
     "beautify": "beautify-proj -i test -o . -c beautify.json && beautify-proj -i scripts -o . -c beautify.json",
     "jshint": "jshint -c .jshintrc test scripts",
     "node-test": "istanbul test --dir cache/coverage/node node_modules/mocha/bin/_mocha test/node.js",
-    "node-full-test": "npm run node-test --coverage && istanbul check-coverage --lines 0 --function 0 --statements 0 --branches 0",
+    "node-full-test": "npm run node-test --coverage && istanbul check-coverage --lines 100 --function 100 --statements 100 --branches 100",
     "browser-server": "node_modules/gofur/scripts/browser/serve.js -c cache -t test/browser.js",
     "browser-test": "node_modules/gofur/scripts/browser/test.js -c cache -t test/browser.js",
     "browser-test-firefox": "node_modules/gofur/scripts/browser/test.js -c cache -t test/browser.js -b selenium:firefox",
@@ -30,11 +30,12 @@
     "browser-coverage-server": "node_modules/gofur/scripts/browser-coverage/serve.js -c cache -t test/browser.js",
     "browser-coverage-test": "node_modules/gofur/scripts/browser-coverage/test.js -c cache -t test/browser.js",
     "browser-coverage-report": "istanbul report --dir cache/coverage/browser --root cache/coverage/browser lcov",
-    "browser-coverage-check": "istanbul check-coverage --lines 0 --function 0 --statements 0 --branches 0 cache/coverage/browser/coverage.json",
+    "browser-coverage-check": "istanbul check-coverage --lines 100 --function 100 --statements 100 --branches 100 cache/coverage/browser/coverage.json",
     "browser-coverage-full-test": "npm run browser-coverage-test && npm run browser-coverage-report && npm run browser-coverage-check",
     "test": "npm run assert-beautified && npm run jshint && npm run node-full-test && npm run browser-coverage-full-test",
     "TODO-build": "",
-    "TODO-test-in-sauce": ""
+    "TODO-test-in-sauce": "",
+    "reset-db": "./reset-db.js"
   },
   "dependencies": {
     "backoff-promise": "0.0.2",
@@ -53,6 +54,7 @@
     "gofur": "^0.0.7",
     "istanbul": "^0.4.5",
     "jshint": "^2.9.4",
+    "memorystream": "^0.3.1",
     "mocha": "^3.4.2"
   },
   "greenkeeper": {
