--- a/circle.yml
+++ b/circle.yml
@@ -13,26 +13,25 @@ dependencies:
     - nvm use 8.1.4 && npm install -g npm
 
     # Install CouchDB 2
-    # - docker run -d --name couchdb --restart always -p 5984:5984 -e COUCHDB_USER='admin' -e COUCHDB_PASSWORD='admin' redgeoff/couchdb
-    - docker run -d --name couchdb -p 5984:5984 -e COUCHDB_USER='admin' -e COUCHDB_PASSWORD='admin' redgeoff/couchdb
+    - docker run -d --name couchdb -p 15984:5984 -e COUCHDB_USER='admin' -e COUCHDB_PASSWORD='admin' redgeoff/couchdb
     # Wait for DB to be ready
     - sleep 15
     # Create system DBs
-    - curl -X PUT http://admin:admin@db.quizster.dev:5984/_users
-    - curl -X PUT http://admin:admin@db.quizster.dev:5984/_replicator
-    - curl -X PUT http://admin:admin@db.quizster.dev:5984/_global_changes
+    - curl -X PUT http://admin:admin@db.quizster.dev:15984/_users
+    - curl -X PUT http://admin:admin@db.quizster.dev:15984/_replicator
+    - curl -X PUT http://admin:admin@db.quizster.dev:15984/_global_changes
 
     # # Install CouchDB 1
-    # - docker run -d --name couchdb-1 --restart always -p 15984:5984 couchdb:1.6.1
+    # - docker run -d --name couchdb-1 -p 25984:5984 couchdb:1.6.1
     # # Wait for DB to be ready
     # - sleep 15
     # # Create admin user
-    # - curl -X PUT localhost:15984/_config/admins/admin -d '"admin"'
+    # - curl -X PUT localhost:25984/_config/admins/admin -d '"admin"'
 
     # Enable CORS
     - nvm use 8.1.4 && npm install -g add-cors-to-couchdb
-    - nvm use 8.1.4 && add-cors-to-couchdb http://localhost:5984 -u admin -p admin
-    # - nvm use 8.1.4 && add-cors-to-couchdb http://localhost:15984 -u admin -p admin
+    - nvm use 8.1.4 && add-cors-to-couchdb http://localhost:15984 -u admin -p admin
+    # - nvm use 8.1.4 && add-cors-to-couchdb http://localhost:25984 -u admin -p admin
 
   override:
     - nvm use 8.1.4 && npm install
@@ -44,15 +43,11 @@ test:
 
   override:
     # Test on CouchDB 2
-    - nvm use 8.1.4 && npm run node-full-test
-    - nvm use 8.1.4 && npm run browser-test-phantomjs
-    - nvm use 8.1.4 && npm run browser-coverage-full-test
+    - nvm use 8.1.4 && COUCHDB_PORT=15984 npm run node-full-test
+    - nvm use 8.1.4 && COUCHDB_PORT=15984 npm run browser-test-phantomjs
+    - nvm use 8.1.4 && COUCHDB_PORT=15984 npm run browser-coverage-full-test
 
     # TODO: replication and a number of other things doesn't appear to be working with the official
     # couchdb 1.6.1 docker image. We'll probably need to build a custom image for these tests.
     # Test on CouchDB 1
-    # - nvm use 8.1.4 && COUCHDB_PORT=15984 npm run node-full-test
-
-  post:
-    # Stop CouchDB instance to prevent bind conflicts with subsequent test containers
-    - docker stop couchdb
+    # - nvm use 8.1.4 && COUCHDB_PORT=25984 npm run node-full-test
