--- a/circle.yml
+++ b/circle.yml
@@ -4,13 +4,15 @@
 
 # Uncomment to test with CouchDB 2
 machine:
+  environment:
+    NODE_VERSION: 8.1.4
   services:
     - docker
 
 dependencies:
   pre:
-    - nvm install 8.1.4
-    - nvm use 8.1.4 && npm install -g npm
+    - nvm install $NODE_VERSION
+    - nvm use $NODE_VERSION && npm install -g npm
 
     # Install CouchDB 2
     # - docker run -d --name couchdb --restart always -p 5984:5984 -e COUCHDB_USER='admin' -e COUCHDB_PASSWORD='admin' redgeoff/couchdb
@@ -30,28 +32,28 @@ dependencies:
     # - curl -X PUT localhost:15984/_config/admins/admin -d '"admin"'
 
     # Enable CORS
-    - nvm use 8.1.4 && npm install -g add-cors-to-couchdb
-    - nvm use 8.1.4 && add-cors-to-couchdb http://localhost:5984 -u admin -p admin
-    # - nvm use 8.1.4 && add-cors-to-couchdb http://localhost:15984 -u admin -p admin
+    - nvm use $NODE_VERSION && npm install -g add-cors-to-couchdb
+    - nvm use $NODE_VERSION && add-cors-to-couchdb http://localhost:5984 -u admin -p admin
+    # - nvm use $NODE_VERSION && add-cors-to-couchdb http://localhost:15984 -u admin -p admin
 
   override:
-    - nvm use 8.1.4 && npm install
+    - nvm use $NODE_VERSION && npm install
 
 test:
   pre:
-    - nvm use 8.1.4 && npm run assert-beautified
-    - nvm use 8.1.4 && npm run jshint
+    - nvm use $NODE_VERSION && npm run assert-beautified
+    - nvm use $NODE_VERSION && npm run jshint
 
   override:
     # Test on CouchDB 2
-    - nvm use 8.1.4 && npm run node-full-test
-    - nvm use 8.1.4 && npm run browser-test-phantomjs
-    - nvm use 8.1.4 && npm run browser-coverage-full-test
+    - nvm use $NODE_VERSION && npm run node-full-test
+    - nvm use $NODE_VERSION && npm run browser-test-phantomjs
+    - nvm use $NODE_VERSION && npm run browser-coverage-full-test
 
     # TODO: replication and a number of other things doesn't appear to be working with the official
     # couchdb 1.6.1 docker image. We'll probably need to build a custom image for these tests.
     # Test on CouchDB 1
-    # - nvm use 8.1.4 && COUCHDB_PORT=15984 npm run node-full-test
+    # - nvm use $NODE_VERSION && COUCHDB_PORT=15984 npm run node-full-test
 
   post:
     # Stop CouchDB instance to prevent bind conflicts with subsequent test containers
