--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "gofur": "^1.1.0",
     "istanbul": "^0.4.5",
     "jshint": "^2.9.4",
-    "mocha": "^5.0.4"
+    "mocha": "^5.0.4",
+    "wait-on": "^2.1.0"
   },
   "greenkeeper": {
     "ignore": [
