--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/node:8.9.4-stretch-browsers
+      - image: circleci/node:stretch-browsers
       - image: couchdb
         environment:
         - COUCHDB_USER: admin
