--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     docker:
       - image: circleci/node:stretch-browsers
-      - image: couchdb
+      - image: couchdb@2.3.1
         environment:
         - COUCHDB_USER: admin
         - COUCHDB_PASSWORD: admin
