--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,8 +3,8 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/node:stretch-browsers
-      - image: couchdb@3.1
+      - image: cimg/node:current-browsers
+      - image: couchdb
         environment:
         - COUCHDB_USER: admin
         - COUCHDB_PASSWORD: admin
